--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ img.blinky{
   	align-content: center;
   	align-items: center;
   	gap: 10px;
-  	width: 80vw;
+  	width: 80%;
 }
 a.external{
 	text-decoration: none;
@@ -47,7 +47,7 @@ a.external::after{
   	flex-wrap: wrap;
     gap: 10px;
 	height: fit-content;
-	width: 100vw;
+	width: 100%;
 	padding-left: 30px;
 	padding-right: 30px;
 }
@@ -76,8 +76,8 @@ a{
 }
 #home{
 	position: fixed;
-	top: 0vh;
-	left: 0vw;
+	top: 0;
+	left: 0;
 	margin:10px;
 	background-color: #8ca9c0ee;
 	padding: 10px;
